--- a/stylovani.css
+++ b/stylovani.css
@@ -41,6 +41,9 @@ img {
         text-align: right;
     }
 
+
+
+    sdfsdfsfsdfsdfsdf
     a {
         text-decoration: none;
         font-weight: bold;
